# market-movement-forecasting-system

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/models/: ma_baseline_1.0.0_1766694435.pkl  ma_crossover_1.0.0_1766695212.pkl  momentum_1.0.0_1766695212.pkl  random_1.0.0_1766696476.pkl  volume_weighted_1.0.0_1766695212.pkl
src/: aggregate_selector.py  database.py  mmfs_gui.py  mmfs_stream.py  mmfs_web.py  model_registry.py  performance_tracker.py  prediction_logger.py
src/models/: __init__.py  base.py  baseline.py
src/static/js/: app.js
src/templates/: index.html  ml_dashboard.html
